--- a/view/strava-api/index/index.phtml
+++ b/view/strava-api/index/index.phtml
@@ -1,5 +1,5 @@
 <!-- Main Content -->
-<div class="most-popular" id="runningStats">
+<div class="most-popular module-page" id="runningStats">
     <div class="row">
         <div class="col-lg-12">
             <div class="heading-section">
@@ -105,7 +105,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <table id="activityTable" class="table table-secondary table-sm table-bordered table-hover table-striped">
+            <table id="activityTable" class="table table-dark table-sm table-bordered table-hover table-striped">
                 <thead class="thead-dark">
                 <tr>
                     <th class="text-center"><i class="fas fa-flag-checkered"> / <i class="fas fa-dumbbell"></i></th>
