--- a/view/strava-api/strava-import/authorization.phtml
+++ b/view/strava-api/strava-import/authorization.phtml
@@ -20,7 +20,7 @@ $this->pageBreadcrumbs()->setItems([
     <div class="col text-center">
         <p>
             Er zijn nog geen access tokens geregistreerd. Dit betekent dat je eerst de Strava applicatie moet<br/>
-            authoriseren om acces tokens te importeren.
+            authoriseren om een acces tokens te importeren.
         </p>
     </div>
 </div>
