--- a/view/strava-api/strava-import/authorize.phtml
+++ b/view/strava-api/strava-import/authorize.phtml
@@ -19,7 +19,7 @@ $this->pageBreadcrumbs()->setItems([
 <div class="row">
     <div class="col text-center">
         <p>
-            Hieronder is de authorisatie code voor u ingevuld. Verstuur deze code om een acces token teveerkrijgen.
+            Hieronder is de authorisatie code voor u ingevuld. Verstuur deze code om een acces token te verkrijgen.
         </p>
     </div>
 </div>
