--- a/view/strava-api/strava-log/index.phtml
+++ b/view/strava-api/strava-log/index.phtml
@@ -27,8 +27,9 @@
                                     <td class="text-center">
                                         <?php if ($index === 0) { ?>
                                             <button type="button" data-importid="<?= $item->getId() ?>"
-                                                    class="btn btn-sm btn-danger removeImport" data-toggle="modal"
-                                                    data-target="#confirmationModal">
+                                                    class="btn btn-sm btn-danger removeImport"
+                                                    data-bs-toggle="modal"
+                                                    data-bs-target="#confirmationModal">
                                                 <i class="fas fa-undo"></i>
                                             </button>
                                         <?php } ?>
@@ -38,7 +39,7 @@
 
                             <?php } ?>
                             <tr>
-                                <th scope="col" colspan="2" class="text-right">Totaal</th>
+                                <th scope="col" colspan="2" class="text-right">Totaal <?= $this->url('beheer/stravalog', ['action' => 'removeImport']); ?></th>
                                 <th scope="col" colspan="2"><?= $totalImports ?></th>
                             </tr>
                             </tbody>
@@ -50,14 +51,14 @@
     </div>
 </div>
 <!-- Confirmation Modal -->
-<div class="modal" id="confirmationModal">
+<div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content bg-dark">
 
             <!-- Modal Header -->
             <div class="modal-header">
-                <h4 class="modal-title">Import terugdraaien</h4>
-                <button type="button" class="close text-white" data-dismiss="modal">&times;</button>
+                <h5 class="modal-title" id="confirmationModalLabel">Import terugdraaien</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <!-- Modal body -->
             <div class="modal-body">
@@ -68,48 +69,10 @@
                 <button class="btn btn-sm btn-danger" id="removeLog" data-removelogid="">
                     Verwijder <i class="fas fa-trash-alt"></i>
                 </button>
-                <button type="button" class="btn btn-sm btn-warning" data-dismiss="modal">
-                    Annuleer <i class="far fa-window-close"></i>
-                </button>
+                <button type="button" class="btn btn-sm btn-warning" data-bs-dismiss="modal">Annuleer</button>
             </div>
 
         </div>
     </div>
 </div>
 <!-- End Confirmation Modal -->
-
-<script>
-    $(document).ready(function () {
-        $('button.removeImport').click(function () {
-            var importId = $(this).data('importid');
-            $('button#removeLog').data('removelogid', importId);
-        });
-
-        $('button#removeLog').click(function () {
-            var removelogId = $(this).data('removelogid');
-
-            if (removelogId != '') {
-                $.ajax({
-                    type: 'POST',
-                    data: {
-                        removelogId: removelogId
-                    },
-                    url: "<?= $this->url('beheer/stravalog', ['action' => 'removeImport']); ?>",
-                    async: true,
-                    success: function (data) {
-                        if (data.success === true) {
-                            $('#confirmationModal').modal('hide')
-                            $('tr#importLogItem' + data.removelogId).slideUp("slow", function () {
-                                // Animation complete.
-                            });
-                        } else {
-                            alert(data.errorMessage);
-                        }
-                    }
-                });
-            }
-        });
-
-    });
-
-</script>
